third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/explicit_impl_of_bad_unique_ptr.stderr
error: unsupported unique_ptr target type
 --> tests/ui/explicit_impl_of_bad_unique_ptr.rs:3:10
  |
3 |     impl UniquePtr<Vec<u8>> {}
  |          ^^^^^^^^^^^^^^^^^^
