third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/explicit_impl_of_bad_unique_ptr.rs
#[cxx::bridge]
mod ffi {
    impl UniquePtr<Vec<u8>> {}
}

fn main() {}
